# web-scraper

./: README.md  pyproject.toml  web_scraper.py
test/: test_web_scraper.py
web_scraper/: web_scraper.py
