[tool.poetry]
name = "web-scraper"
version = "0.1.0"
description = ""
authors = ["Clarissa P <clarissapamonicutt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
bs4 = "^0.0.1"
pytest = "^7.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
